--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,9 @@ version: 0.6.0
 homepage: https://github.com/ajinasokan/flutter_displaymode
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">1.22.6"
+  sdk: ">=2.16.1 <3.0.0"
+  flutter: ">=2.5.0"
+
 
 dependencies:
   flutter:
